Update tft export to support multiple abilities